--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Convert Github Flavored Markdown to U2 Flavored BBCode"
     />
-    <title>U2 Markdown To BBCode Converter</title>
+    <title>Markdown To U2 BBCode Converter</title>
   </head>
   <body></body>
 </html>
